Update SPA to 2.8.1

--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x040A
 Name=Spanish (Español)
-Version=2.8.0
+Version=2.8.1
 Author=Steven Rogers, Leandro Botella Penalva
 1=Aceptar
 2=Cancelar
@@ -64,7 +64,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 12=Deshabilitar Ejecución Automática
 
 [DIALOG_11]
-0=BD y UHD
+0=BD / UHD
 3=&Habilitar soporte para Blu-ray
 4=Eliminar &BD+
 5=Eliminar &RC (Código de Región)
@@ -103,12 +103,12 @@ Author=Steven Rogers, Leandro Botella Penalva
 11=Capacidad:
 12=&Mantener protección
 13=Verificar &hash del contenido
-14=Crear archivo de suma de comprobación &MD5
+14=Crear archivo de suma de comprobación &md5
 15=Crear &dvdid.xml
 16=Crear archivo de registro
-17=Create disc.&metaiso
+17=Crear disc.&metaiso
 18=Copiar solo la carpeta VIDEO_TS
-19=Verify &M2TS files
+19=Verificar archivos &M2TS
 
 [DIALOG_15]
 0=Xreveal
@@ -386,6 +386,6 @@ Author=Steven Rogers, Leandro Botella Penalva
 154=Deshabilitar
 155=Pausado
 156=Infinito
-157=Are you sure you want to unregister?
-158=No drives are scanned by Xreveal! You can change the settings in <a>My Drives</a>.
-159=There is no enough space on destination drive %C:!
+157=¿Estás seguro de que quieres desregistrar?
+158=¡No hay unidades escaneadas por Xreveal! Puedes cambiar estos ajustes en <a>Mis Unidades</a>.
+159=No hay espacio suficiente en la unidad de destino %C:!
