--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0407
 Name=German (Deutsch)
-Version=2.8.0
+Version=2.8.1
 Author=The Punisher
 1=OK
 2=Abbrechen
@@ -106,9 +106,9 @@ Author=The Punisher
 14=Erstelle &MD5 checksum Datei
 15=Erstelle &dvdid.xml
 16=Erstelle Log Datei
-17=Create disc.&metaiso
-18=Nur VIDEO_TS-Ordner kopieren
-19=Verify &M2TS files
+17=Erstelle disc.&metaiso
+18=Nur &VIDEO_TS-Ordner kopieren
+19=Überprüfe &M2TS-Dateien
 
 [DIALOG_15]
 0=Xreveal
@@ -295,7 +295,7 @@ Author=The Punisher
 63=Änderungen verbleibend
 64=Region %C
 65=&Immer im Vordergrund
-66=&Erwerben
+66=&Lizenz erwerben
 67=Lizenziert für: %s\r\nUser max.:%d\r\nKostenlose Updates bis: %s
 68=Für immer
 69=&Registrieren ...
@@ -385,7 +385,7 @@ Author=The Punisher
 153=Aktivieren
 154=Deaktivieren
 155=Pausiert
-156=Endlos
-157=Are you sure you want to unregister?
-158=No drives are scanned by Xreveal! You can change the settings in <a>My Drives</a>.
-159=There is no enough space on destination drive %C:!
+156=Unendlich
+157=Sind Sie sicher das die Lizenz entfernt werden soll ?
+158=Kein Laufwerk zum Scannen ausgewählt! Bitte einstellen in <a>Meine Laufwerke</a>.
+159=Nicht genug freier Speicherplatz auf Ziellaufwerk %C:!
