--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0804
 Name=Chinese (简体中文)
-Version=2.8.1
+Version=2.8.2
 Author=Tanuki
 1=确定
 2=取消
@@ -389,3 +389,5 @@ Author=Tanuki
 157=你确定要取消注册吗?
 158=Xreveal 没有扫描任何驱动器! 您可以在<a>我的光驱</a>中更改设置.
 159=目标驱动器 %C: 上没有足够的空间!
+160=操作
+161=重新扫描
