--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -389,3 +389,5 @@ Author=The Punisher
 157=Sind Sie sicher das die Lizenz entfernt werden soll ?
 158=Kein Laufwerk zum Scannen ausgewählt! Bitte einstellen in <a>Meine Laufwerke</a>.
 159=Nicht genug freier Speicherplatz auf Ziellaufwerk %C:!
+160=Action
+161=Rescan
