--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0409
 Name=English
-Version=2.8.1
+Version=2.8.2
 Author=
 1=OK
 2=Cancel
@@ -389,3 +389,5 @@ Author=
 157=Are you sure you want to unregister?
 158=No drives are scanned by Xreveal! You can change the settings in <a>My Drives</a>.
 159=There is no enough space on destination drive %C:!
+160=Action
+161=Rescan
