--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -389,3 +389,5 @@ Author=Andex
 157=Etes-vous sûr de vouloir annuler votre licence?
 158=Aucun lecteur à scanner par Xreveal!\nVeuillez en sélectionner au moins un dans <a>Lecteurs</a>
 159=Manque d'espace libre sur le lecteur de destination %C:!
+160=Action
+161=Rescan
