--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -389,3 +389,5 @@ Author=비너스걸 (VenusGirl)
 157=등록을 취소하시겠습니까?
 158=Xreveal에서는 어떤 드라이브도 스캔되지 않습니다! <a>내 드라이브</a>에서 설정을 변경할 수 있습니다.
 159=대상 드라이브에 공간이 충분하지 않습니다 %C:!
+160=Action
+161=Rescan
