--- a/Xreveal_PLK.ini
+++ b/Xreveal_PLK.ini
@@ -389,3 +389,5 @@ Author=Fresta
 157=Are you sure you want to unregister?
 158=No drives are scanned by Xreveal! You can change the settings in <a>My Drives</a>.
 159=There is no enough space on destination drive %C:!
+160=Action
+161=Rescan
