--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -389,3 +389,5 @@ Author=Steven Rogers, Leandro Botella Penalva
 157=¿Estás seguro de que quieres desregistrar?
 158=¡No hay unidades escaneadas por Xreveal! Puedes cambiar estos ajustes en <a>Mis Unidades</a>.
 159=No hay espacio suficiente en la unidad de destino %C:!
+160=Action
+161=Rescan
