--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x040A
 Name=Spanish (Español)
-Version=2.8.1
+Version=2.8.2
 Author=Steven Rogers, Leandro Botella Penalva
 1=Aceptar
 2=Cancelar
@@ -389,5 +389,5 @@ Author=Steven Rogers, Leandro Botella Penalva
 157=¿Estás seguro de que quieres desregistrar?
 158=¡No hay unidades escaneadas por Xreveal! Puedes cambiar estos ajustes en <a>Mis Unidades</a>.
 159=No hay espacio suficiente en la unidad de destino %C:!
-160=Action
-161=Rescan
+160=Acción
+161=Rescanear
