--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0407
 Name=German (Deutsch)
-Version=2.8.1
+Version=2.8.2
 Author=The Punisher
 1=OK
 2=Abbrechen
@@ -99,7 +99,7 @@ Author=The Punisher
 7=Typ:
 8=Kapazität:
 9=Schutz:
-10=Freier Speicherplatz:
+10=Verfügbar:
 11=Kapazität:
 12=&Schutz nicht entfernen
 13=Überprüfung: Content &Hash
@@ -333,7 +333,7 @@ Author=The Punisher
 101=ISO überprüfen
 102=Ordner überprüfen
 103=Laufwerk überprüfen
-104=Unterstützt Bus-Verschlüsselung
+104=Bus-Verschlüsselung
 105=%s (Laufwerk: %s)
 106=Öffne Log Ordner
 107=Einstellungen
@@ -389,5 +389,5 @@ Author=The Punisher
 157=Sind Sie sicher das die Lizenz entfernt werden soll ?
 158=Kein Laufwerk zum Scannen ausgewählt! Bitte einstellen in <a>Meine Laufwerke</a>.
 159=Nicht genug freier Speicherplatz auf Ziellaufwerk %C:!
-160=Action
-161=Rescan
+160=Vorgang
+161=Erneut scannen
