Update Xreveal_FRA.ini -> v2.8.2

--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x040C
 Name=French (Français)
-Version=2.8.1
+Version=2.8.2
 Author=Andex
 1=OK
 2=Annuler
@@ -256,7 +256,7 @@ Author=Andex
 24=%.1f Mo/s
 25=Processus terminé avec succès!
 26=Pas de clé de déchiffrement trouvée dans {%s}!
-27=
+27=Site web...
 28=Echec d'ouverture du disque, code d'erreur: %s
 29=Lecteur
 30=Fabricant
@@ -390,4 +390,4 @@ Author=Andex
 158=Aucun lecteur à scanner par Xreveal!\nVeuillez en sélectionner au moins un dans <a>Lecteurs</a>
 159=Manque d'espace libre sur le lecteur de destination %C:!
 160=Action
-161=Rescan
+161=Rescanner
