--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -1,8 +1,8 @@
 [INFO]
 ID=0x041D
 Name=Swedish (Svenska)
-Version=2.5.6
-Author=Sopor
+Version=2.8.2
+Author=Sopor, Harry Samwel
 1=OK
 2=Avbryt
 
@@ -29,7 +29,7 @@ Author=Sopor
 
 [DIALOG_6]
 0=Inställningar
-3=Standard
+3=Återställ
 
 [DIALOG_7]
 0=Status
@@ -38,13 +38,13 @@ Author=Sopor
 0=Allmänt
 3=Språk:
 4=&Starta Xreveal med Windows
-5=Keep this window always on &top
+5=Behåll fönstret längst &fram
 6=&Lista enheter i systemfältsmenyn
 7=Sök efter uppdateringar &automatiskt
-8=<a>Check now</a>
-9=Theme:
-10=Using AES &hardware acceleration
-11=<a>Benchmark</a>
+8=<a>Sök nu</a>
+9=Tema:
+10=Använd AES &hårdvaruacceleration
+11=<a>Hastighetstest</a>
 
 [DIALOG_9]
 0=CD
@@ -52,7 +52,7 @@ Author=Sopor
 
 [DIALOG_10]
 0=DVD
-3=&Enable DVD support
+3=&Aktivera DVD stöd
 4=Ta bort programvaruregionskod
 5=Ta bort skyddet för regionkodsförbättring
 6=Skivregion:
@@ -60,72 +60,72 @@ Author=Sopor
 8=Ta bort förbjudna användaråtgärder
 9=Ta bort ARccOS
 10=Transparens för undertexter
-11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
-12=Disable AutoRun
+11=Xreveal behöver <a>libdvdcss-2.dll</a> för att öppna DVDer.
+12=Inaktivera AutoRun
 
 [DIALOG_11]
 0=BD / UHD
-3=&Enable Blu-ray support
+3=&Aktivera Blu-ray stöd
 4=Ta bort skyddet BD+
 5=Ta bort Bluray-regionskod
 6=Skivregion:
-7=Remove &country code
+7=Ta bort &landskod
 8=Ta bort förbjudna användaråtgärder
-9=Ta bort kopieringskontrollinformation
+9=Ta bort kopieringskontroll information
 10=Inaktivera BD-Live
 11=Simulera ansluten 3D-skärm
-12=Rename AACS &folder to
-15=Remove &annoying adverts and trailers
-16=Remove video sequences &shorter than %s minutes
+12=Döp om AACS &mapp till
+15=Ta bort &irriterande reklam och filmklipp
+16=Ta bort videosekvenser &kortare än %s minuter
 
 [DIALOG_12]
 0=KeyDB
 3=Xreveal innehåller ingen dekrypteringsnyckel, du behöver en nyckeldatabas för att få det att fungera. <a>Läs mer</a>.
-4=Plats för KeyDB.cfg
-6=&Find keys online if not found locally
+4=Sökväg för KeyDB
+6=&Hitta nycklar på nätet om inga hittas lokalt
 
 [DIALOG_13]
-0=My Drives
-3=&Select drives that you want to scan by Xreveal.
+0=Mina enheter
+3=&Välj enhet du vill Xreveal ska skanna.
 5=&Inaktivera AutoRun och AutoPlay
 8=Aktivera &LibreDrive för UHD
 
 [DIALOG_14]
 1=Start
-3=Source
+3=Källa
 4=Destination
-5=Options
+5=Alternativ
 6=Info
-7=Type:
-8=Capacity:
-9=Protection:
-10=Free space:
-11=Capacity:
-12=&Keep protection
-13=Verify content &hash
-14=Create &MD5 checksum file
-15=Create &dvdid.xml
-16=Create log file
-17=Create disc.&metaiso
-18=Copy only &VIDEO_TS folder
-19=Verify &M2TS files
+7=Typ:
+8=Kapacitet:
+9=Skydd:
+10=Fritt utrymme:
+11=Kapacitet:
+12=&Behåll skydd
+13=Verifiera &innehållshash
+14=Skapa &MD5 kontrollsummafil
+15=Skapa &dvdid.xml
+16=Skapa loggfil
+17=Skapa skiva.&metaiso
+18=Kopiera bara &VIDEO_TS mapp
+19=Verifiera &M2TS filer
 
 [DIALOG_15]
 0=Xreveal
-3=Source:
+3=Källa:
 4=Destination:
-6=Time elapsed:
-7=Time remaining:
-8=Read errors:
-9=Read rate:
+6=Förfluten tid:
+7=Tid kvar:
+8=Läsfel:
+9=Läshastighet:
 
 [DIALOG_16]
-0=spelarens region
+0=Spelarens region
 
 [DIALOG_17]
-0=Ripper
-3=Read retry count:
-4=Abort when ignored errors exceed :
+0=Rippare
+3=Läs om räknare:
+4=Avbryt när ignorerade fel överstiger:
 
 [DIALOG_18]
 0=Registrering
@@ -134,75 +134,75 @@ Author=Sopor
 
 [DIALOG_19]
 0=Snabbtangenter
-3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
-4=Show Xreveal system tray menu:
-5=Show settings window:
-6=Enable/Disable Xreveal:
-7=Rip to ISO file:
-8=Rip to folder:
-9=Content Hash Verifier:
+3=Du kan skapa systemomfattande snabbknappar för att trigga vissa funktioner medan Xreveal körs.
+4=Visa Xreveal i systemfältet:
+5=Visa inställningsfönstret:
+6=Aktivera/Avaktivera Xreveal:
+7=Rippa till ISO fil:
+8=Rippa till mapp:
+9=Innehållshash verifierare:
 
 [DIALOG_20]
 0=HD DVD
-3=&Enable HD DVD support
+3=&Aktivera HD DVD stöd
 4=Ta bort första speltiteln
-5=Ta bort UOPs (User Operation Prohibitions)
-6=Ta bort föräldrabegränsningar
-7=KeyDB.cfg plats
+5=Ta bort förbjudna användaråtgärder
+6=Ta bort föräldrarbegränsningar
+7=KeyDB sökväg
 
 [DIALOG_21]
-0=My Discs
+0=Mina Skivor
 
 [DIALOG_22]
-1=Yes
-2=No
-3=Register
-4=The disc key was not found in KeyDB.cfg. Do you want to find it online?
+1=Ja
+2=Nej
+3=Registrera
+4=Nyckeln till skivan hittades inte i KeyDB.cfg. Vill du söka på nätet?
 
 [DIALOG_23]
-0=Disc Information
+0=Skivinformation
 
 [DIALOG_24]
-0=Drive Information
-12=Default value (%s)
-13=Force yes
-14=Force no
-15=Global value (%s)
-16=Enable
-17=Disable
+0=Enhetsinformation
+12=Förvalt värde (%s)
+13=Tvinga ja
+14=Tvinga nej
+15=Globalt värde (%s)
+16=Aktivera
+17=Avaktivera
 
 [DIALOG_25]
-0=Import...
-3=Please specify or drag the source keydb.db to import into <a>%s</a>.
+0=Importera...
+3=Välj eller släpp keydb.cfg källfilen för att importera till <a>%s</a>.
 
 [DIALOG_26]
-0=Content Hash Verifier
+0=Innehållshash verifierare
 
 [DIALOG_27]
-0=Sounds
-3=Play sound after opening disc
-4=Play sound after ripping disc
-5=Success sound:
-6=Error sound:
+0=Ljud
+3=Spela ljud efter öppnad skiva
+4=Spela ljud efter rippad skiva
+5=Ljud för lyckad process:
+6=Ljud för misslyckad process:
 
 [DIALOG_28]
-0=Create a Dump File
-3=Please wait...
-4=Adding %s...
-5=<a>How to submit a dump file?</a>
-6=The file has been successfully created.
+0=Skapa en Dumpfil
+3=Var god vänta...
+4=Lägger till %s...
+5=<a>Hur lämnar man in en dumpfil?</a>
+6=Filen har skapats utan problem.
 
 [DIALOG_29]
-0=Actions
-3=Post-Scan action
-4=Specify a command to run after opening disc. <a>Supported macros</a>.
-5=Post-Rip action
-6=Specify a command to run after ripping disc. <a>Supported macros</a>.
+0=Funktioner
+3=Efter-Skanning funktion
+4=Välj ett kommando att köra efter öppnad skiva. <a>Stödda makros</a>.
+5=Efter-Rippning funktion
+6=Välj ett kommando att köra efter rippad skiva. <a>Stödda makros</a>.
 
 [DIALOG_30]
-0=Country code
-3=Country
-4=Code
+0=Landskod
+3=Land
+4=Kod
 
 [DIALOG_A]
 0=Programuppdatering
@@ -250,19 +250,19 @@ Author=Sopor
 18=Xreveal fungerar inte om %s körs.\n\nVill du stänga det?
 19=Xreveal söker igenom enhet %C:
 20=Skivan du har satt i kommer att bli tillgänglig inom kort, vänta!
-21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
-22=Directory '%s' has not enough space!\nYou need an additional %s.
+21=Xreveal är inte aktiv för enhet %C:!\n\nFör att rippa en kopieringsskyddad skiva måste Xreveal vara aktiv för enheten.
+22=Katalog '%s' har inte tillräckligt med utrymme!\nDu behöver ytterligare %s.
 23=Kopierar %s...
 24=%.1f MB/s
-25=Operation completed successfully!
+25=Operationen avslutades framgångsrikt!
 26=Ingen dekrypteringsnyckel hittades i {%s}
 27=&Hemsida
-28=Failed to open disc, error code: %s.
+28=Misslyckades att öppna skiva, felkod: %s.
 29=Enhet
-30=Leverantör
-31=Produkt
-32=Revision
-33=Firmware-datum
+30=Tillverkare
+31=Modell
+32=Version
+33=Firmware/datum
 34=Serienummer
 35=N/A
 36=Ja
@@ -270,31 +270,31 @@ Author=Sopor
 38=%C:
 39=%C:\[%S]
 40=&Status
-41=&Open in Explorer
-42=&Create a dump file
-43=&Content Hash Verifier
-44=Kopiera till &hårddisk...
-45=Kopiera till avb&ild...
-46=Aktiv&era Xreveal
-47=I&naktivera Xreveal
-48=In&ställningar...
+41=&Öppna i webläsare
+42=&Skapa en dumpfil
+43=&Innehållshash verifierare...
+44=&Kopiera till hårddisk...
+45=&Kopiera till skivavbild...
+46=&Aktivera Xreveal
+47=&Inaktivera Xreveal
+48=&Inställningar...
 49=&Återkoppling
-50=Verk&tyg
+50=&Verktyg
 51=&Om
 52=&Avsluta
 53=&Mata ut
-54=La&dda
-55=Egenska&per
+54=&Ladda
+55=&Egenskaper
 56=Inga
 57=Detta program är gratisprogram.\n\nOm det här programmet är användbart för dig kan du göra en <a>donation</a> för att hjälpa oss att förbättra det.
 58=%s existerar redan.\nVill du ersätta den?
 59=Är du säker på att du vill avbryta?
-60=Your license has expired on %s.
+60=Din licens har utgått den %s.
 61=Spelare
 62=Regionkod
 63=Återstående antal ändringar
 64=Region %C
-65=&Håll dig på topp
+65=&Behåll fönstret längst fram
 66=&Köpa
 67=Licensierad till %s\r\nMax användare: %d\r\nFria uppdateringar till: %s
 68=Alltid
@@ -302,92 +302,92 @@ Author=Sopor
 70=Tack för registreringen!
 71=Registreringsnyckeln du angivit är felaktig.
 72=Ingen skiva
-73=Återställ ALLA alternativ till deras standardvärden?\n\nOm du klickar på 'Nej' återställs bara aktuella sidalternativ.
+73=Återställ ALLA inställningar till deras ursprungsvärden?\n\nOm du klickar på 'Nej' återställs bara inställningar för aktuella sidan.
 74=ID
 75=Status
-76=Label
-77=Type
-78=Capacity
-79=Date
-80=Disc ID
-81=Date added
+76=Titel
+77=Typ
+78=Kapacitet
+79=Datum
+80=Skiv ID
+81=Datum inlagd
 82=MKB
-83=Main playlist
-84=BD+ date
+83=Huvudspellista
+84=BD+ datum
 85=
 86=VID
 87=MK
 88=VUK
 89=UK
-90=&View
-91=&Delete "%s"
-92=Delete &All
-93=Are you sure you want to delete "%s"?
-94=Are you sure you want to delete all records?
-95=This feature is only available in the <a>Pro version</a>.
+90=&Visa
+91=&Radera "%s"
+92=Radera &Alla
+93=Är du säker att du vill radera "%s"?
+94=Är du säker att du vill radera alla uppgifter?
+95=Denna funktion är endast tillgänglig i <a>Pro versionen</a>.
 96=Uppdatera
-97=&Edit
-98=&Import...
+97=&Redigera
+98=&Importera...
 99=
-100=Comment
-101=Verify ISO
-102=Verify Folder
-103=Verify Drive
-104=Bus encryption capable
-105=%s (Drive: %s)
-106=Open Log Folder
-107=Options
-108=Verbose output
-109=Command line version (Windows/macOS/Linux)
-110=Abort
-111=Vendor specific
-112=Directory %s doesn't exist. Do you want to create it?
-113=When done: 
-114=Do nothing
+100=Kommentar
+101=Verifiera ISO
+102=Verifiera Mapp
+103=Verifiera Enhet
+104=Buss krypteringsmöjlig
+105=%s (Enhet: %s)
+106=Öppna loggmapp
+107=Alternativ
+108=Detaljerad info
+109=Kommandotolk version (Windows/macOS/Linux)
+110=Avbryt
+111=Tillverkarspecifik
+112=Hittar inte katalog %s. Vill du skapa den?
+113=När klar: 
+114=Gör ingenting
 115=, 
-116=Eject disc
-117=Play sound
-118=Quit Xreveal
-119=No action
-120=Shutdown
-121=Sleep
-122=Hibernate
-123=Lock system
-124=Log off
-125=All Files
-126=ISO Files
-127=WAV Files
-128=KeyDB Files
-129=Database Files
-130=Select or drop the WAV file here
-131=Select or drop the KeyDB.cfg here
-132=%u%% complete
-133=Error reading from drive %C:!\nSectors: %u-%u
-134=Error reading %s!\nSectors: %u-%u
-135=Aborted!
-136=Copying...
-137=Pro feature
-138=Unregister
-139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed, and running!\n\nDo you want to continue?
-140=Delete incomplete file?\n\n%s
-141=Light
-142=Dark
+116=Mata ut skiva
+117=Spela ljud
+118=Avsluta Xreveal
+119=Ingen handling
+120=Stäng av
+121=Viloläge
+122=Strömsparläge
+123=Lås system
+124=Logga ut
+125=Alla Filer
+126=ISO Filer
+127=WAV Filer
+128=KeyDB Filer
+129=Databas Filer
+130=Välj eller släpp WAV filer här
+131=Välj eller släpp KeyDB.cfg här
+132=%u%% färdig
+133=Felläsning från enhet %C:!\nSektorer: %u-%u
+134=Felläsning %s!\nSektorer: %u-%u
+135=Avbruten!
+136=kopierar...
+137=Pro funktion
+138=Avregistrera
+139=Du kommer skapa en skyddad diskavbildningsfil. Filen kan endast läsas från en virtuell enhet, om Xreveal är installerad och körs!\n\nVill du fortsätta?
+140=Radera ofärdig fil?\n\n%s
+141=Ljus
+142=Mörk
 143=System
-144=(%u retries)
-145=Pause the operation
-146=Resume the operation
-147=Programs
-148=Busy
-149=&Check for updates
-150=&Save...
-151=Enable LibreDrive
-152=Drive certificate
-153=Enable
-154=Disable
-155=Paused
-156=Infinity
-157=Are you sure you want to unregister?
-158=No drives are scanned by Xreveal! You can change the settings in <a>My Drives</a>.
-159=There is no enough space on destination drive %C:!
-160=Action
-161=Rescan
+144=(%u försök)
+145=Pausa operationen
+146=Återuppta operationen
+147=Program
+148=Upptagen
+149=&Sök efter uppdateringar
+150=&Spara...
+151=Aktivera LibreDrive
+152=Enhetscertifikat
+153=Aktivera
+154=Avaktivera
+155=Pausad
+156=Oändligt
+157=Är du säker att du vill avregistrera?
+158=Inga enheter skannas av Xreveal! Du kan ändra inställningarna i <a>Mina Enheter</a>.
+159=Det finns inte tillräckligt med utrymme i destinationsenhet %C:!
+160=Handling
+161=Skanna igen
