--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -7,7 +7,7 @@ Author=Sopor, Harry Samwel
 2=Avbryt
 
 [DIALOG_1]
-5=&Avbryt
+5=Avbryt
 
 [DIALOG_2]
 0=Om Xreveal
@@ -37,9 +37,9 @@ Author=Sopor, Harry Samwel
 [DIALOG_8]
 0=Allmänt
 3=Språk:
-4=&Starta Xreveal med Windows
-5=Behåll fönstret längst &fram
-6=&Lista enheter i systemfältsmenyn
+4=Starta Xreveal med Windows
+5=Behåll fönstret längst fram
+6=Lista enheter i systemfältsmenyn
 7=Sök efter uppdateringar &automatiskt
 8=<a>Sök nu</a>
 9=Tema:
@@ -65,33 +65,33 @@ Author=Sopor, Harry Samwel
 
 [DIALOG_11]
 0=BD / UHD
-3=&Aktivera Blu-ray stöd
+3=Aktivera Blu-ray stöd
 4=Ta bort skyddet BD+
 5=Ta bort Bluray-regionskod
 6=Skivregion:
-7=Ta bort &landskod
+7=Ta bort landskod
 8=Ta bort förbjudna användaråtgärder
 9=Ta bort kopieringskontroll information
 10=Inaktivera BD-Live
 11=Simulera ansluten 3D-skärm
-12=Döp om AACS &mapp till
-15=Ta bort &irriterande reklam och filmklipp
-16=Ta bort videosekvenser &kortare än %s minuter
+12=Döp om AACS mapp till
+15=Ta bort irriterande reklam och filmklipp
+16=Ta bort videosekvenser kortare än %s minuter
 
 [DIALOG_12]
 0=KeyDB
 3=Xreveal innehåller ingen dekrypteringsnyckel, du behöver en nyckeldatabas för att få det att fungera. <a>Läs mer</a>.
 4=Sökväg för KeyDB
-6=&Hitta nycklar på nätet om inga hittas lokalt
+6=Hitta nycklar på nätet om inga hittas lokalt
 
 [DIALOG_13]
 0=Mina enheter
-3=&Välj enhet du vill Xreveal ska skanna.
-5=&Inaktivera AutoRun och AutoPlay
-8=Aktivera &LibreDrive för UHD
+3=Välj enhet du vill Xreveal ska skanna.
+5=Inaktivera AutoRun och AutoPlay
+8=Aktivera LibreDrive för UHD
 
 [DIALOG_14]
-1=Start
+1=Starta
 3=Källa
 4=Destination
 5=Alternativ
@@ -101,14 +101,14 @@ Author=Sopor, Harry Samwel
 9=Skydd:
 10=Fritt utrymme:
 11=Kapacitet:
-12=&Behåll skydd
-13=Verifiera &innehållshash
-14=Skapa &MD5 kontrollsummafil
-15=Skapa &dvdid.xml
+12=Behåll skydd
+13=Verifiera innehållshash
+14=Skapa MD5 kontrollsummafil
+15=Skapa dvdid.xml
 16=Skapa loggfil
-17=Skapa skiva.&metaiso
-18=Kopiera bara &VIDEO_TS mapp
-19=Verifiera &M2TS filer
+17=Skapa skiva.metaiso
+18=Kopiera bara VIDEO_TS mapp
+19=Verifiera M2TS filer
 
 [DIALOG_15]
 0=Xreveal
@@ -144,7 +144,7 @@ Author=Sopor, Harry Samwel
 
 [DIALOG_20]
 0=HD DVD
-3=&Aktivera HD DVD stöd
+3=Aktivera HD DVD stöd
 4=Ta bort första speltiteln
 5=Ta bort förbjudna användaråtgärder
 6=Ta bort föräldrarbegränsningar
@@ -256,7 +256,7 @@ Author=Sopor, Harry Samwel
 24=%.1f MB/s
 25=Operationen avslutades framgångsrikt!
 26=Ingen dekrypteringsnyckel hittades i {%s}
-27=&Hemsida
+27=Hemsida
 28=Misslyckades att öppna skiva, felkod: %s.
 29=Enhet
 30=Tillverkare
@@ -269,22 +269,22 @@ Author=Sopor, Harry Samwel
 37=Nej
 38=%C:
 39=%C:\[%S]
-40=&Status
-41=&Öppna i webläsare
-42=&Skapa en dumpfil
-43=&Innehållshash verifierare...
-44=&Kopiera till hårddisk...
-45=&Kopiera till skivavbild...
-46=&Aktivera Xreveal
-47=&Inaktivera Xreveal
-48=&Inställningar...
-49=&Återkoppling
-50=&Verktyg
-51=&Om
-52=&Avsluta
-53=&Mata ut
-54=&Ladda
-55=&Egenskaper
+40=Status
+41=Öppna i webläsare
+42=Skapa en dumpfil
+43=Innehållshash verifierare...
+44=Kopiera till hårddisk...
+45=Kopiera till skivavbild...
+46=Aktivera Xreveal
+47=Inaktivera Xreveal
+48=Inställningar...
+49=Återkoppling
+50=Verktyg
+51=Om
+52=Avsluta
+53=Mata ut
+54=Ladda
+55=Egenskaper
 56=Inga
 57=Detta program är gratisprogram.\n\nOm det här programmet är användbart för dig kan du göra en <a>donation</a> för att hjälpa oss att förbättra det.
 58=%s existerar redan.\nVill du ersätta den?
@@ -294,8 +294,8 @@ Author=Sopor, Harry Samwel
 62=Regionkod
 63=Återstående antal ändringar
 64=Region %C
-65=&Behåll fönstret längst fram
-66=&Köpa
+65=Behåll fönstret längst fram
+66=Köpa
 67=Licensierad till %s\r\nMax användare: %d\r\nFria uppdateringar till: %s
 68=Alltid
 69=Registrering...
@@ -319,15 +319,15 @@ Author=Sopor, Harry Samwel
 87=MK
 88=VUK
 89=UK
-90=&Visa
-91=&Radera "%s"
+90=Visa
+91=Radera "%s"
 92=Radera &Alla
 93=Är du säker att du vill radera "%s"?
 94=Är du säker att du vill radera alla uppgifter?
 95=Denna funktion är endast tillgänglig i <a>Pro versionen</a>.
 96=Uppdatera
-97=&Redigera
-98=&Importera...
+97=Redigera
+98=Importera...
 99=
 100=Kommentar
 101=Verifiera ISO
@@ -378,8 +378,8 @@ Author=Sopor, Harry Samwel
 146=Återuppta operationen
 147=Program
 148=Upptagen
-149=&Sök efter uppdateringar
-150=&Spara...
+149=Sök efter uppdateringar
+150=Spara...
 151=Aktivera LibreDrive
 152=Enhetscertifikat
 153=Aktivera
@@ -390,4 +390,5 @@ Author=Sopor, Harry Samwel
 158=Inga enheter skannas av Xreveal! Du kan ändra inställningarna i <a>Mina Enheter</a>.
 159=Det finns inte tillräckligt med utrymme i destinationsenhet %C:!
 160=Handling
+
 161=Skanna igen
