--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -77,6 +77,7 @@ Author=jekovcar
 12=Rename AACS &folder to
 15=Премахни &досадните реклами и трейлъри
 16=Премахни видео поредици &по-кратки от %s минутаs
+17=Прозрачност на субтитрите
 
 [DIALOG_12]
 0=KeyDB
@@ -148,7 +149,6 @@ Author=jekovcar
 4=Премахни първо възпроизв. заглавие
 5=Премахни UOPs (забрани потребителски операции)
 6=Премахни родителски ограничения
-7=KeyDB.cfg местоположение
 
 [DIALOG_21]
 0=Моите дискове
