--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -77,6 +77,7 @@ Author=Tanuki
 12=将AACS文件夹改名为
 15=移除烦人的广告和预告片(&A)
 16=移除长度短于 %s 分钟的视频(&S)
+17=透明度
 
 [DIALOG_12]
 0=KeyDB
@@ -148,7 +149,6 @@ Author=Tanuki
 4=移除片头
 5=移除 UOP (用户操作禁止)
 6=移除家长限制
-7=KeyDB.cfg 路径
 
 [DIALOG_21]
 0=我的光碟
