--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -77,6 +77,7 @@ Author=
 12=Rename AACS &folder to
 15=Remove &annoying adverts and trailers
 16=Remove video sequences &shorter than %s minutes
+17=&Subtitle transparency
 
 [DIALOG_12]
 0=KeyDB
@@ -148,7 +149,6 @@ Author=
 4=Remove &first play title
 5=Remove &UOPs (User Operation Prohibitions)
 6=Remove &parental restrictions
-7=KeyDB.cfg location
 
 [DIALOG_21]
 0=My Discs
