--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -77,6 +77,7 @@ Author=Andex
 12=Re&nommer le dossier AACS
 15=Supprimer les avertissements et bandes-annonces &ennuyeuses
 16=Supprimer les séquences &vidéo inférieures à %s minutes
+17=&Transparence des sous-titres
 
 [DIALOG_12]
 0=KeyDB
@@ -148,7 +149,6 @@ Author=Andex
 4=Supprimer le 1er &titre lisible
 5=Supprimer &UOPs (User Operation Prohibitions)
 6=Supprimer les &restrictions parentales
-7=Emplacement du fichier 'KeyDB.cfg'
 
 [DIALOG_21]
 0=Catalogue
