--- a/Xreveal_IND.ini
+++ b/Xreveal_IND.ini
@@ -77,6 +77,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 12=Rename AACS &folder to
 15=Remove &annoying adverts and trailers
 16=Remove video sequences &shorter than %s minutes
+17=&Transparan Takarir
 
 [DIALOG_12]
 0=KeyDB
@@ -148,7 +149,6 @@ Author= Lieba Natur Brilian (naturbrilian)
 4=Hapus judul &pertama kali yang diputar
 5=Hapus &UOPs (User Operation Prohibitions)
 6=Hapus pembatasan &orang tua
-7=Lokasi KeyDB.cfg
 
 [DIALOG_21]
 0=Disk Saya
