--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -77,6 +77,7 @@ Author=Re*Index.(ot_inc)
 12=AACS フォルダーの名前を変更する(&F)
 15=迷惑な広告やトレーラーを削除(&A)
 16=%s 分未満のビデオシーケンスを削除(&S)
+17=字幕を透過
 
 [DIALOG_12]
 0=KeyDB
@@ -148,7 +149,6 @@ Author=Re*Index.(ot_inc)
 4=ファーストプレイタイトルを削除
 5=UOP の削除 (ユーザー操作の禁止)
 6=保護者による制限を解除
-7=KeyDB.cfg の場所
 
 [DIALOG_21]
 0=ディスク
