--- a/Xreveal_PLK.ini
+++ b/Xreveal_PLK.ini
@@ -77,6 +77,7 @@ Author=Fresta
 12=Rename AACS &folder to
 15=Remove &annoying adverts and trailers
 16=Remove video sequences &shorter than %s minutes
+17=Przejrzystość Napisów
 
 [DIALOG_12]
 0=KeyDB
@@ -148,7 +149,6 @@ Author=Fresta
 4=Usuń tytuł pierwszego odtwarzania
 5=Usuń UOPs (User Operation Prohibitions)
 6=Usuń ograniczenia rodzicielskie
-7=Lokalizacja KeyDB.cfg
 
 [DIALOG_21]
 0=My Discs
