--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -77,6 +77,7 @@ Author=jekovcar
 12=Rename AACS &folder to
 15=Удалить назойливую рекламу и трейлеры
 16=Удалить видеофрагменты продолжительностью менее 10 минут.
+17=&Прозрачность субтитров
 
 [DIALOG_12]
 0=KeyDB
@@ -148,7 +149,6 @@ Author=jekovcar
 4=Удалить &оглавление
 5=Удалить &UOPs (запреты на действия пользователя)
 6=Удалить &родительские ограничения
-7=Местоположение KeyDB.cfg
 
 [DIALOG_21]
 0=Мои диски
