--- a/Xreveal_SLV.ini
+++ b/Xreveal_SLV.ini
@@ -77,6 +77,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 12=Rename AACS &folder to
 15=Remove &annoying adverts and trailers
 16=Remove video sequences &shorter than %s minutes
+17=Prosojnost podnapisov
 
 [DIALOG_12]
 0=KeyDB
@@ -148,7 +149,6 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 4=Odstrani prvi naslov predvajanja
 5=Odstrani UOP-je (prepovedi uporabniških operacij)
 6=Odstrani nadrejene omejitve
-7=Lokacija KeyDB.cfg
 
 [DIALOG_21]
 0=My Discs
