--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -77,6 +77,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 12=Renombrar &carpeta AACS a
 15=Eliminar anuncios &molestos y tráileres
 16=Eliminar &secuencias de vídeo inferiores a %s minutos
+17=&Transparencia de los subtítulos
 
 [DIALOG_12]
 0=KeyDB
@@ -148,7 +149,6 @@ Author=Steven Rogers, Leandro Botella Penalva
 4=Eliminar &primer título de reproducción
 5=Eliminar &UOPs (Prohibiciones de Operaciones de Usuario)
 6=Eliminar restricciones &parentales
-7=Ubicación de KeyDB.cfg
 
 [DIALOG_21]
 0=Mis Discos
