--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -77,6 +77,7 @@ Author=Sopor, Harry Samwel
 12=Döp om AACS mapp till
 15=Ta bort irriterande reklam och filmklipp
 16=Ta bort videosekvenser kortare än %s minuter
+17=Transparens för undertexter
 
 [DIALOG_12]
 0=KeyDB
@@ -148,7 +149,6 @@ Author=Sopor, Harry Samwel
 4=Ta bort första speltiteln
 5=Ta bort förbjudna användaråtgärder
 6=Ta bort föräldrarbegränsningar
-7=KeyDB sökväg
 
 [DIALOG_21]
 0=Mina Skivor
@@ -390,5 +390,4 @@ Author=Sopor, Harry Samwel
 158=Inga enheter skannas av Xreveal! Du kan ändra inställningarna i <a>Mina Enheter</a>.
 159=Det finns inte tillräckligt med utrymme i destinationsenhet %C:!
 160=Handling
-
 161=Skanna igen
