--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -77,6 +77,7 @@ Author=The Punisher
 12=AACS &Ordner umbenennen als
 15=Entfernung von &störender Werbung und Trailern
 16=Entfernung von Video-Sequenzen kürzer als %s Minuten
+17=Untertitel-Transparenz
 
 [DIALOG_12]
 0=KeyDB
@@ -148,7 +149,6 @@ Author=The Punisher
 4=Entfernung von z.B. Studio Trailer, uä.
 5=Benutzereinschränkungen entfernen (UOP)
 6=Entfernung von Benutzereinschränkungen für z.B. PowerDVD, uä.
-7=KeyDB.cfg Speicherort
 
 [DIALOG_21]
 0=Meine Discs
