--- a/Xreveal_FIN.ini
+++ b/Xreveal_FIN.ini
@@ -77,6 +77,7 @@ Author=TJL
 12=Rename AACS &folder to
 15=Remove &annoying adverts and trailers
 16=Remove video sequences &shorter than %s minutes
+17=Tekstityksen läpinäkyvyys
 
 [DIALOG_12]
 0=KeyDB
@@ -148,7 +149,6 @@ Author=TJL
 4=Poista ensimmäinen toistonimike
 5=Poista UOP (User Operation Prohibitions)
 6=Poista vanhempain rajoitukset
-7=KeyDB.cfg sijainti
 
 [DIALOG_21]
 0=My Discs
