--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -77,6 +77,7 @@ Author=bovirus (bovirus@gmail.com)
 12=Rename AACS &folder to
 15=Remove &annoying adverts and trailers
 16=Remove video sequences &shorter than %s minutes
+17=Sottotitoli trasparenti
 
 [DIALOG_12]
 0=KeyDB
@@ -148,7 +149,6 @@ Author=bovirus (bovirus@gmail.com)
 4=Rimuovi &primo titolo riprodotto
 5=Rimuovi &UOPs (User Operation Prohibitions)
 6=Rimuovi restrizioni &genitori
-7=Percorso file KeyDB.cfg
 
 [DIALOG_21]
 0=Mie dischi
