--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -77,6 +77,7 @@ Author=비너스걸 (VenusGirl)
 12=AACS 폴더 이름 바꾸기(&F)
 15=성가신 광고와 예고편 제거(&A)
 16=%s분보다 짧은 비디오 시퀀스 제거(&S)
+17=자막 투명도
 
 [DIALOG_12]
 0=KeyDB
@@ -148,7 +149,6 @@ Author=비너스걸 (VenusGirl)
 4=첫 번째 재생 제목 제거
 5=UOP 제거 (사용자 조작 금지)
 6=부모 제한 제거
-7=KeyDB.cfg 위치
 
 [DIALOG_21]
 0=내 디스크
