--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -42,7 +42,7 @@ Author=bovirus (bovirus@gmail.com)
 6=&Elenca unità nel menu barra di sistema
 7=&Controlla automaticamente aggiornamenti
 8=<a>Controlla ora</a>
-9=Theme:
+9=Tema:
 10=Usa accelerazione hardware &AES
 11=<a>Prestazioni</a>
 
@@ -52,7 +52,7 @@ Author=bovirus (bovirus@gmail.com)
 
 [DIALOG_10]
 0=DVD
-3=&Enable DVD support
+3=&Abilita supporto DVD
 4=Rimuovi &RC (codice regionale)
 5=Rimuovi RC&E (miglioramento codice regionale)
 6=Codice regione &disco:
@@ -60,12 +60,12 @@ Author=bovirus (bovirus@gmail.com)
 8=Rimuovi &UOP (proibizioni operazioni utente)
 9=Rimuovi &ARccOS
 10=Sottotitoli trasparenti
-11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
-12=Disable AutoRun
+11=Xreveal necessita di <a>libdvdcss-2.dll</a> per aprire dischi DVD.
+12=Disabilita Avvio automatico
 
 [DIALOG_11]
 0=Blu-ray
-3=&Enable Blu-ray support
+3=&Abilita supporto Blu-ray
 4=Rimuovi &BD+
 5=Rimuovi &RC (codice regionale)
 6=Codice regione &disco:
@@ -74,16 +74,16 @@ Author=bovirus (bovirus@gmail.com)
 9=Rimuo&vi CCI (Copy Control Information)
 10=Disabilita BD &Live
 11=&Simula display 3D connesso
-12=Rename AACS &folder to
-15=Remove &annoying adverts and trailers
-16=Remove video sequences &shorter than %s minutes
+12=Rinomina cartella AACS in
+15=Rimuovi pubblicità e trailers
+16=Rimuovi sequenze video più corte di %s minuti
 17=Sottotitoli trasparenti
 
 [DIALOG_12]
 0=KeyDB
 3=Xreveal non contiene alcuna chiave di decrittazione.\nPer farlo funzionare è necessario un database di chiavi. <a>Maggiori info</a>.
 4=Percorso file KeyDB.cfg
-6=&Find keys online if not found locally
+6=&Cerca chiavi online se non trovate localmente
 
 [DIALOG_13]
 0=Mie unità
@@ -92,41 +92,41 @@ Author=bovirus (bovirus@gmail.com)
 8=Abilita &LibreDrive per UHD
 
 [DIALOG_14]
-1=Start
-3=Source
-4=Destination
-5=Options
-6=Info
-7=Type:
-8=Capacity:
-9=Protection:
-10=Free space:
-11=Capacity:
-12=&Keep protection
-13=Verify content &hash
-14=Create &MD5 checksum file
-15=Create &dvdid.xml
-16=Create log file
-17=Create disc.&metaiso
-18=Copy only &VIDEO_TS folder
-19=Verify &M2TS files
+1=Avvia
+3=Sorgente
+4=Destinazione
+5=Opzioni
+6=Informazioni
+7=Tipo:
+8=Capacità:
+9=Protezione:
+10=Spazio libero:
+11=Capacità:
+12=&Mantieni protezione
+13=Verica &Hash contenuto
+14=Crea file di checksum &MD5
+15=Crea &dvdid.xml
+16=Crea file di log
+17=Crea disc.&metaiso
+18=Copia solo cartella &VIDEO_TS
+19=Verifica files &M2TS
 
 [DIALOG_15]
 0=Xreveal
-3=Source:
-4=Destination:
-6=Time elapsed:
-7=Time remaining:
-8=Read errors:
-9=Read rate:
+3=Sorgente:
+4=Destinazione:
+6=Tempo trascorso:
+7=Tempo rimanente:
+8=Errori di lettura:
+9=Velocità di lettura:
 
 [DIALOG_16]
 0=Regione riproduttore
 
 [DIALOG_17]
 0=Ripper
-3=Read retry count:
-4=Abort when ignored errors exceed :
+3=Numero tentativi di lettura:
+4=Abbandona quando gli errori ignorati sono superiori a :
 
 [DIALOG_18]
 0=Registra Xreveal
@@ -135,17 +135,17 @@ Author=bovirus (bovirus@gmail.com)
 
 [DIALOG_19]
 0=Tasti scelta rapida
-3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
-4=Show Xreveal system tray menu:
-5=Show settings window:
-6=Enable/Disable Xreveal:
-7=Rip to ISO file:
-8=Rip to folder:
-9=Content Hash Verifier:
+3=È possibile creare hotkeys globali per richiamare alcune azioni mentre Xreveal è in uso.
+4=Mostra il menu di Xreveal nell'area delle notifiche:
+5=Mostra finestra delle opzioni:
+6=Abilita/Disabilita Xreveal:
+7=Rippa in un file ISO:
+8=Rippa nella cartella:
+9=Verificatore Hash contenuto:
 
 [DIALOG_20]
 0=HD DVD
-3=&Enable HD DVD support
+3=&Abilita supporto HD DVD
 4=Rimuovi &primo titolo riprodotto
 5=Rimuovi &UOPs (User Operation Prohibitions)
 6=Rimuovi restrizioni &genitori
@@ -160,49 +160,49 @@ Author=bovirus (bovirus@gmail.com)
 4=La chiave del disco non è stata trovata in KeyDB.cfg.\nVuoi provare la funzione Pro "Trova chiave online"?
 
 [DIALOG_23]
-0=Disc Information
+0=Informazioni disco
 
 [DIALOG_24]
-0=Drive Information
-12=Default value (%s)
-13=Force yes
-14=Force no
-15=Global value (%s)
-16=Enable
-17=Disable
+0=Informazioni unità
+12=Valore predefinito (%s)
+13=Forza sì
+14=Forza no
+15=Valore globale (%s)
+16=Abilita
+17=Disabilita
 
 [DIALOG_25]
-0=Import...
-3=Please specify or drag the source keydb.db to import into <a>%s</a>.
+0=Importa...
+3=Specifica o trascina la sorgente keydb.db da importare in <a>%s</a>.
 
 [DIALOG_26]
-0=Content Hash Verifier
+0=Verificatore Hash contenuto
 
 [DIALOG_27]
-0=Sounds
-3=Play sound after opening disc
-4=Play sound after ripping disc
-5=Success sound:
-6=Error sound:
+0=Suoni
+3=Riproduci suono dopo l'apertura del disco
+4=Riproduci suono dopo il ripping del disco
+5=Suono ripping avvenuto con successo:
+6=Suono errore durante il ripping:
 
 [DIALOG_28]
-0=Create a Dump File
-3=Please wait...
-4=Adding %s...
-5=<a>How to submit a dump file?</a>
-6=The file has been successfully created.
+0=Crea un file di dump
+3=Attendere...
+4=Aggiunta di %s...
+5=<a>Come inoltrare un file di dump?</a>
+6=Il file è stato creato con successo.
 
 [DIALOG_29]
-0=Actions
-3=Post-Scan action
-4=Specify a command to run after opening disc. <a>Supported macros</a>.
-5=Post-Rip action
-6=Specify a command to run after ripping disc. <a>Supported macros</a>.
+0=Azioni
+3=Azione a seguito della scansione
+4=Specificare un comando da eseguire dopo l'apertura del disco. <a>Macro supportate</a>.
+5=Azione a seguito del ripping
+6=Specifica un comando da eseguire dopo il ripping del disco. <a>Macro supportate</a>.
 
 [DIALOG_30]
-0=Country code
-3=Country
-4=Code
+0=Codice regionale
+3=Paese
+4=Codice
 
 [DIALOG_A]
 0=Aggiornamento programma
@@ -250,11 +250,11 @@ Author=bovirus (bovirus@gmail.com)
 18=Xreveal non funzionerà se %s è in esecuzione.\n\nVuoi chiudere %s?
 19=Xreveal sta eseguendo la scansione dell'unità %C:
 20=Il disco che hai inserito sarà disponibile a breve, attendi!
-21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
-22=Directory '%s' has not enough space!\nYou need an additional %s.
+21=Xreveal non è attivo per l'unità %C:!\n\nPer poter eseguire il ripping di un disco protetto da copia, Xreveal deve essere attivo per l'unità.
+22=La cartella '%s' non dispone di sufficiente spazio!\nÈ necessario un addizionale %s.
 23=Copia di %s...
 24=%.1f MB/s
-25=Operation completed successfully!
+25=Operazione completata con successo!
 26=La chiave del disco non è stata trovata in {%s}
 27=Sito &web programma
 28=Xreveal non è riuscito ad aprire il disco, codice errore: %s.
@@ -270,9 +270,9 @@ Author=bovirus (bovirus@gmail.com)
 38=%C:
 39=%C:\[%S]
 40=&Stato
-41=&Open in Explorer
-42=&Create a dump file
-43=&Content Hash Verifier
+41=&Apri in Explorer
+42=&Crea un file di dump
+43=&Verificatore Hash contenuto
 44=Crea immagine nel &disco fisso...
 45=Crea file i&mmagine ISO...
 46=&Abilita Xreveal
@@ -289,7 +289,7 @@ Author=bovirus (bovirus@gmail.com)
 57=Stai usando la versione gratuita, <a>aggiorna alla versione Pro</a> per sbloccare funzionalità aggiuntive.
 58=Il file [%s] esiste già.\nVuoi sostituire il file esistente?
 59=Sei sicuro di voler annullare l'operazione?
-60=Your license has expired on %s.
+60=La tua licenza è scaduta il %s.
 61=Riproduttore
 62=Codice regionale
 63=Cambiamenti disponibili
@@ -330,64 +330,64 @@ Author=bovirus (bovirus@gmail.com)
 98=&Importa...
 99=
 100=Commento
-101=Verify ISO
-102=Verify Folder
-103=Verify Drive
-104=Bus encryption capable
-105=%s (Drive: %s)
-106=Open Log Folder
-107=Options
-108=Verbose output
-109=Command line version (Windows/macOS/Linux)
-110=Abort
-111=Vendor specific
-112=Directory %s doesn't exist. Do you want to create it?
-113=When done: 
-114=Do nothing
+101=Verifica ISO
+102=Verifica cartella
+103=Verifica unità
+104=Supporta la criptazione del bus
+105=%s (Unità: %s)
+106=Apri cartella Log
+107=Opzioni
+108=Output dettagliato
+109=Versione linea di comando (Windows/macOS/Linux)
+110=Abbandona
+111=Specifico del rivenditore
+112=La cartella %s non esiste. Si desidera crearla?
+113=Una volta completato: 
+114=Non fare nulla
 115=, 
-116=Eject disc
-117=Play sound
-118=Quit Xreveal
-119=No action
-120=Shutdown
-121=Sleep
-122=Hibernate
-123=Lock system
-124=Log off
-125=All Files
-126=ISO Files
-127=WAV Files
-128=KeyDB Files
-129=Database Files
-130=Select or drop the WAV file here
-131=Select or drop the KeyDB.cfg here
-132=%u%% complete
-133=Error reading from drive %C:!\nSectors: %u-%u
-134=Error reading %s!\nSectors: %u-%u
-135=Aborted!
-136=Copying...
-137=Pro feature
-138=Unregister
-139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed, and running!\n\nDo you want to continue?
-140=Delete incomplete file?\n\n%s
-141=Light
-142=Dark
-143=System
-144=(%u retries)
-145=Pause the operation
-146=Resume the operation
+116=Espelli disco
+117=Riproduci suono
+118=Chiudi Xreveal
+119=Nessuna azione
+120=Spegni
+121=Sospendi
+122=Iberna
+123=Blocca sistema
+124=Disconnetti
+125=Tutti i files
+126=Files ISO
+127=Files WAV
+128=Files KeyDB
+129=Files di Database
+130=Seleziona o trascina il file WAV qui
+131=Seleziona o trascina il file KeyDB.cfg qui
+132=%u%% completato
+133=Errore di lettura dall'unità %C:!\nSettori: %u-%u
+134=Errore nella lettura di %s!\nSettori: %u-%u
+135=Abbandonato!
+136=Copia...
+137=Funzione Pro
+138=Deregistra
+139=Stai per creare un file immagine protetto. Il file può essere letto unicamente da un'unità virtuale, se xReveal è installato e in esecuzione!\n\nVuoi continuare?
+140=Eliminare file incompleto?\n\n%s
+141=Chiaro
+142=Scuro
+143=Sistema
+144=(%u tentativi)
+145=Metti in pausa l'operazione
+146=Riprendi l'operazione
 147=Programmi
-148=Busy
-149=&Check for updates
-150=&Save...
-151=Enable LibreDrive
-152=Drive certificate
-153=Enable
-154=Disable
-155=Paused
-156=Infinity
-157=Are you sure you want to unregister?
-158=No drives are scanned by Xreveal! You can change the settings in <a>My Drives</a>.
-159=There is no enough space on destination drive %C:!
-160=Action
-161=Rescan
+148=Occupato
+149=&Verifica disponibilità aggiornamenti
+150=&Salva...
+151=Abilita LibreDrive
+152=Certificato unità
+153=Abilita
+154=Disabilita
+155=Messo in pausa
+156=Infinito
+157=Sei sicuro di voler deregistrare il programma?
+158=Nessuna unità è scansionata da Xreveal! Puoi modifcare le impostazioni in <a>My Drives</a>.
+159=Spazio insufficiente nell'unità di destinazione %C:!
+160=Azione
+161=Riesegui la scansione
