--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0410
 Name=Italian (Italiano)
-Version=2.6.6
+Version=2.8.2
 Author=bovirus (bovirus@gmail.com)
 1=OK
 2=Annulla
@@ -68,9 +68,9 @@ Author=bovirus (bovirus@gmail.com)
 3=&Abilita supporto Blu-ray
 4=Rimuovi &BD+
 5=Rimuovi &RC (codice regionale)
-6=Codice regione &disco:
-7=Remove &country code
-8=Rimuovi &UOP (proibizioni operazioni utente)
+6=Codice regionale &disco:
+7=Rimuovi codice regionale
+8=Rimuovi &UOP (User Operation Prohibitions)
 9=Rimuo&vi CCI (Copy Control Information)
 10=Disabilita BD &Live
 11=&Simula display 3D connesso
