--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -107,9 +107,9 @@ Author=비너스걸 (VenusGirl)
 14=MD5 체크섬 파일 생성(&M)
 15=dvdid.xml 만들기(&D)
 16=로그 파일 만들기
-17=Create disc.&metaiso
+17=disc.metaiso 만들기(&M)
 18=VIDEO_TS 폴더만 복사
-19=Verify &M2TS files
+19=M2TS 파일 확인(&M)
 
 [DIALOG_15]
 0=Xreveal
@@ -266,7 +266,7 @@ Author=비너스걸 (VenusGirl)
 34=일련 번호
 35=N/A
 36=예
-37=아니오
+37=아니요
 38=%C:
 39=%C:\[%S]
 40=상태(&S)
@@ -309,7 +309,7 @@ Author=비너스걸 (VenusGirl)
 77=유형
 78=용량
 79=날짜
-80=Disc ID
+80=디스크 ID
 81=추가된 날짜
 82=MKB
 83=기본 재생목록
@@ -367,11 +367,11 @@ Author=비너스걸 (VenusGirl)
 135=중단 요청 승인
 136=복사 중...
 137=Pro 기능
-138=Unregister
+138=등록 취소
 139=보호된 이미지 파일을 생성합니다. 파일은 Xreveal이 설치되어 실행 중인 경우에만 가상 드라이브에서 읽을 수 있습니다!\n\n계속하시겠습니까?
 140=불완전한 파일을 삭제하시겠습니까?\n\n%s
 141=밝은
-142=어두은
+142=어두운
 143=시스템
 144=(%u 재시도)
 145=작업 일시 중지
@@ -389,5 +389,6 @@ Author=비너스걸 (VenusGirl)
 157=등록을 취소하시겠습니까?
 158=Xreveal에서는 어떤 드라이브도 스캔되지 않습니다! <a>내 드라이브</a>에서 설정을 변경할 수 있습니다.
 159=대상 드라이브에 공간이 충분하지 않습니다 %C:!
-160=Action
-161=Rescan
+160=동작
+
+161=다시 검색
