--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -45,6 +45,7 @@ Author=The Punisher
 9=Schema:
 10=&AES Hardwarebeschleunigung nutzen
 11=<a>Benchmark</a>
+12=Show &information window for new media
 
 [DIALOG_9]
 0=CD
