--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0409
 Name=English
-Version=2.8.2
+Version=2.8.4
 Author=
 1=OK
 2=Cancel
@@ -45,6 +45,7 @@ Author=
 9=Theme:
 10=Using AES &hardware acceleration
 11=<a>Benchmark</a>
+12=Show &information window for new media
 
 [DIALOG_9]
 0=CD
@@ -109,7 +110,7 @@ Author=
 16=Create log file
 17=Create disc.&metaiso
 18=Copy only &VIDEO_TS folder
-19=Verify &M2TS files
+19=Verify &M2TS sync bytes
 
 [DIALOG_15]
 0=Xreveal
