--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -45,6 +45,7 @@ Author=Andex
 9=&Thème:
 10=Utiliser l'accélération &matérielle AES
 11= <a>Test</a>
+12=Show &information window for new media
 
 [DIALOG_9]
 0=CD
