--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -45,6 +45,7 @@ Author=bovirus (bovirus@gmail.com)
 9=Tema:
 10=Usa accelerazione hardware &AES
 11=<a>Prestazioni</a>
+12=Show &information window for new media
 
 [DIALOG_9]
 0=CD
