--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -45,6 +45,7 @@ Author=Re*Index.(ot_inc)
 9=テーマ:
 10=AES ハードウェアアクセラレーションを使用する(&A)
 11=<a>ベンチマーク</a>
+12=Show &information window for new media
 
 [DIALOG_9]
 0=CD
@@ -109,7 +110,7 @@ Author=Re*Index.(ot_inc)
 16=ログファイルを作成する
 17=Create disc.&metaiso
 18=Copy only &VIDEO_TS folder
-19=Verify &M2TS files
+19=Verify &M2TS sync bytes
 
 [DIALOG_15]
 0=Xreveal
