--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -45,6 +45,7 @@ Author=비너스걸 (VenusGirl)
 9=테마:
 10=AES 하드웨어 가속화 사용(&A)
 11=<a>북마크</a>
+12=Show &information window for new media
 
 [DIALOG_9]
 0=CD
@@ -109,7 +110,7 @@ Author=비너스걸 (VenusGirl)
 16=로그 파일 만들기
 17=disc.metaiso 만들기(&M)
 18=VIDEO_TS 폴더만 복사
-19=M2TS 파일 확인(&M)
+19=Verify &M2TS sync bytes
 
 [DIALOG_15]
 0=Xreveal
