--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -45,6 +45,7 @@ Author=jekovcar
 9=Тема:
 10=Использовать аппаратное ускорение &AES
 11=<a>Бенчмарк</a>
+12=Show &information window for new media
 
 [DIALOG_9]
 0=CD
@@ -109,7 +110,7 @@ Author=jekovcar
 16=Создать файл журнала
 17=Create disc.&metaiso
 18=Копировать только VIDEO_TS folder
-19=Verify &M2TS files
+19=Verify &M2TS sync bytes
 
 [DIALOG_15]
 0=Xreveal
