--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -45,6 +45,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 9=Tema:
 10=Usar aceleración por hardware &AES
 11=<a>Prueba de rendimiento</a>
+12=Show &information window for new media
 
 [DIALOG_9]
 0=CD
