--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -45,6 +45,7 @@ Author=Sopor, Harry Samwel
 9=Tema:
 10=Använd AES &hårdvaruacceleration
 11=<a>Hastighetstest</a>
+12=Show &information window for new media
 
 [DIALOG_9]
 0=CD
