--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0804
 Name=Chinese (简体中文)
-Version=2.8.2
+Version=2.8.4
 Author=Tanuki
 1=确定
 2=取消
@@ -45,6 +45,7 @@ Author=Tanuki
 9=主题:
 10=启用 AES 硬件加速(&H)
 11=<a>测速</a>
+12=解密后显示信息窗口(&I)
 
 [DIALOG_9]
 0=音乐 CD
