--- a/Xreveal_IND.ini
+++ b/Xreveal_IND.ini
@@ -45,6 +45,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 9=Theme:
 10=Gunakan akselerasi perangkat keras &AES
 11=<a>Benchmark</a>
+12=Show &information window for new media
 
 [DIALOG_9]
 0=CD
@@ -109,7 +110,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 16=Buat berkas log
 17=Create disc.&metaiso
 18=Copy only &VIDEO_TS folder
-19=Verify &M2TS files
+19=Verify &M2TS sync bytes
 
 [DIALOG_15]
 0=Xreveal
