--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x040C
 Name=French (Français)
-Version=2.8.2
+Version=2.8.4
 Author=Andex
 1=OK
 2=Annuler
@@ -45,7 +45,7 @@ Author=Andex
 9=&Thème:
 10=Utiliser l'accélération &matérielle AES
 11= <a>Test</a>
-12=Show &information window for new media
+12=Afficher une fenêtre d'&information pour les nouveaux médias
 
 [DIALOG_9]
 0=CD
@@ -108,9 +108,9 @@ Author=Andex
 14=Créer un fichier de contrôle &MD5
 15=Créer un fichier &dvdid.xml
 16=Créer un fichier &journal
-17=Créer un &fichier disc.metaiso
+17=Créer un fichier disc.met&aiso
 18=Copier &seulement le dossier 'VIDEO_TS'
-19=Vérifier les fichiers M2&TS
+19=Vérifier les &octets de synchronisation M2TS
 
 [DIALOG_15]
 0=Xreveal
