--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0412
 Name=Korean (한국어)
-Version=2.8.3
+Version=2.8.4
 Author=비너스걸 (VenusGirl)
 1=확인
 2=취소
@@ -45,7 +45,7 @@ Author=비너스걸 (VenusGirl)
 9=테마:
 10=AES 하드웨어 가속화 사용(&A)
 11=<a>북마크</a>
-12=Show &information window for new media
+12=Show 새 미디어에 대한 정보 창 표시(&I)
 
 [DIALOG_9]
 0=CD
@@ -110,7 +110,7 @@ Author=비너스걸 (VenusGirl)
 16=로그 파일 만들기
 17=disc.metaiso 만들기(&M)
 18=VIDEO_TS 폴더만 복사
-19=Verify &M2TS sync bytes
+19=M2TS 동기화 바이트 확인(M2)
 
 [DIALOG_15]
 0=Xreveal
@@ -393,4 +393,5 @@ Author=비너스걸 (VenusGirl)
 160=동작
 
 161=다시 검색
+
 
