Update SPA to 2.8.4

--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x040A
 Name=Spanish (Español)
-Version=2.8.2
+Version=2.8.4
 Author=Steven Rogers, Leandro Botella Penalva
 1=Aceptar
 2=Cancelar
@@ -45,7 +45,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 9=Tema:
 10=Usar aceleración por hardware &AES
 11=<a>Prueba de rendimiento</a>
-12=Show &information window for new media
+12=Mostrar ventana de &información para nuevos medios
 
 [DIALOG_9]
 0=CD
@@ -110,7 +110,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 16=Crear archivo de registro
 17=Crear disc.&metaiso
 18=Copiar solo la carpeta VIDEO_TS
-19=Verificar archivos &M2TS
+19=Verificar bytes de sincronización &M2TS
 
 [DIALOG_15]
 0=Xreveal
