--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -126,7 +126,7 @@ Author=Sopor, Harry Samwel
 
 [DIALOG_17]
 0=Rippare
-3=Läs om räknare:
+3=Läs-om räknare:
 4=Avbryt när ignorerade fel överstiger:
 
 [DIALOG_18]
@@ -392,3 +392,4 @@ Author=Sopor, Harry Samwel
 159=Det finns inte tillräckligt med utrymme i destinationsenhet %C:!
 160=Handling
 161=Skanna igen
+
