--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x041D
 Name=Swedish (Svenska)
-Version=2.8.2
+Version=2.8.4
 Author=Sopor, Harry Samwel
 1=OK
 2=Avbryt
@@ -45,7 +45,7 @@ Author=Sopor, Harry Samwel
 9=Tema:
 10=Använd AES &hårdvaruacceleration
 11=<a>Hastighetstest</a>
-12=Show &information window for new media
+12=Visa informationsfönster för ny media
 
 [DIALOG_9]
 0=CD
@@ -110,7 +110,7 @@ Author=Sopor, Harry Samwel
 16=Skapa loggfil
 17=Skapa skiva.metaiso
 18=Kopiera bara VIDEO_TS mapp
-19=Verifiera M2TS filer
+19=Verifiera M2TS synk bytes
 
 [DIALOG_15]
 0=Xreveal
@@ -392,4 +392,5 @@ Author=Sopor, Harry Samwel
 159=Det finns inte tillräckligt med utrymme i destinationsenhet %C:!
 160=Handling
 161=Skanna igen
+
 
