--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -110,7 +110,7 @@ Author=Sopor, Harry Samwel
 16=Skapa loggfil
 17=Skapa skiva.metaiso
 18=Kopiera bara VIDEO_TS mapp
-19=Verifiera M2TS synk bytes
+19=Verifiera M2TS synk-bytes
 
 [DIALOG_15]
 0=Xreveal
@@ -142,7 +142,7 @@ Author=Sopor, Harry Samwel
 6=Aktivera/Avaktivera Xreveal:
 7=Rippa till ISO fil:
 8=Rippa till mapp:
-9=Innehållshash verifierare:
+9=Verifiera innehållshash:
 
 [DIALOG_20]
 0=HD DVD
@@ -183,8 +183,8 @@ Author=Sopor, Harry Samwel
 0=Ljud
 3=Spela ljud efter öppnad skiva
 4=Spela ljud efter rippad skiva
-5=Ljud för lyckad process:
-6=Ljud för misslyckad process:
+5=Ljud efter lyckad process:
+6=Ljud efter misslyckad process:
 
 [DIALOG_28]
 0=Skapa en Dumpfil
@@ -349,10 +349,10 @@ Author=Sopor, Harry Samwel
 116=Mata ut skiva
 117=Spela ljud
 118=Avsluta Xreveal
-119=Ingen handling
+119=Ingen åtgärd
 120=Stäng av
-121=Viloläge
-122=Strömsparläge
+121=Sätt i viloläge
+122=Sätt i strömsparläge
 123=Lås system
 124=Logga ut
 125=Alla Filer
@@ -390,7 +390,8 @@ Author=Sopor, Harry Samwel
 157=Är du säker att du vill avregistrera?
 158=Inga enheter skannas av Xreveal! Du kan ändra inställningarna i <a>Mina Enheter</a>.
 159=Det finns inte tillräckligt med utrymme i destinationsenhet %C:!
-160=Handling
+160=Åtgärd
 161=Skanna igen
+
 
 
