--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -334,7 +334,7 @@ Author=Sopor, Harry Samwel
 101=Verifiera ISO
 102=Verifiera Mapp
 103=Verifiera Enhet
-104=Buss krypteringsmöjlig
+104=Stöder Busskryptering
 105=%s (Enhet: %s)
 106=Öppna loggmapp
 107=Alternativ
@@ -392,6 +392,7 @@ Author=Sopor, Harry Samwel
 159=Det finns inte tillräckligt med utrymme i destinationsenhet %C:!
 160=Åtgärd
 161=Skanna igen
+
 
 
 
